--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-native": "0.74.3",
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.4.0",
-    "react-native-chart-kit": "^6.12.0",
+    "react-native-pie-chart": "^3.0.2",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0"
